<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardContainer"
        android:layout_width="match_parent"
        android:layout_height="400sp"
        app:cardCornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/TermsAndConditionsIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            app:srcCompat="@drawable/icon_featured"
            tools:layout_editor_absoluteX="130dp"
            tools:layout_editor_absoluteY="131dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="64dp"
            android:layout_marginBottom="24dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/TermsAndConditionsHeaderTextView"
                android:layout_width="300sp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/txt_title_aprovisionamiento"
                android:textColor="@color/terms_and_conditions_header"
                android:textSize="20sp"
                android:textStyle="bold"
                app:fontFamily="@font/lato"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/TermsAndConditionsBodyTextView"
                android:layout_width="300sp"
                android:layout_height="80dp"
                android:layout_marginTop="80dp"
                android:gravity="center"
                android:scrollbars="vertical"
                android:text="@string/txt_inf_aprovisionamiento"
                android:textColor="@color/down_arrow"
                android:textSize="16sp"
                app:fontFamily="@font/lato"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/TermsAndConditionsAcceptButton"
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/darker_blue"
                android:paddingHorizontal="24dp"
                android:paddingVertical="12dp"
                android:text="@string/txt_aceptar"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:cornerRadius="24sp"
                app:fontFamily="@font/lato"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/TermsAndConditionsBodyTextView" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/TermsAndConditionsCancelButton"
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black"
                android:paddingHorizontal="24dp"
                android:paddingVertical="12dp"
                android:text="Cancelar"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:cornerRadius="24sp"
                app:fontFamily="@font/lato"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/TermsAndConditionsAcceptButton" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>




</androidx.constraintlayout.widget.ConstraintLayout>