<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LoginLayout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="bottom"
    android:background="@color/white"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">



            <LinearLayout
                android:id="@+id/LinearFont"
                android:layout_width="match_parent"
                android:layout_height="286dp"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:background="@mipmap/image_login"
                >
                <ImageView

                    android:src="@drawable/card_credijamar_background_white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="48dp"
                    android:clipToOutline="true"

                    />


            </LinearLayout>
            <LinearLayout
                android:id="@+id/LinearBienvenido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/LinearFont"
                android:translationY="-90dp">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#42C1AC"
                    android:fontFamily="@font/geomanist_bold"
                    android:text="@string/title_geoma"
                    android:textColor="@color/white"
                    android:textFontWeight="400"
                    android:textSize="36sp"
                    android:padding="16dp"
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/LinearBienvenido"
                android:layout_marginTop="-95dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_bold"
                    android:gravity="top"
                    android:lineSpacingExtra="5sp"
                    android:text="@string/description"
                    android:textAppearance="@style/description"
                    android:textFontWeight="400"
                    android:lineHeight="24sp"
                    android:textSize="16sp"
                    android:padding="16dp"
                    android:translationY="-2.4sp"/>



                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/geomanist_regular"
                    android:text="Tipo de documento"
                    android:textColor="@color/text"
                    android:textSize="16sp"
                    />

                <Spinner
                    android:id="@+id/my_spinner"
                    android:layout_width="328dp"
                    android:layout_height="44dp"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/spinner_border"
                    android:contentDescription="Selecciona una opción"
                    android:inputType="number"
                    android:layout_marginBottom="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="16dp"
                    />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="189dp"
                    android:layout_height="17dp"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/geomanist_regular"
                    android:text="Número de documento"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/editTextTextPersonName"
                    android:layout_width="328dp"
                    android:layout_height="50dp"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:fontFamily="@font/geomanist_regular"
                    android:hint="Ingresa tu número de documento"
                    android:inputType="textPersonName"
                    android:textColor="@color/soft_gray"
                    android:background="@drawable/spinner_border"
                    android:paddingLeft="8dp"
                    android:layout_marginBottom="10dp"
                    />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="8dp"
                    android:gravity="center_horizontal|start"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/checkBox"
                        style="@style/MyCheckBoxStyle"
                        android:layout_width="32sp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/geomanist_regular" />

                    <TextView
                        android:id="@+id/checkBoxText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_chbox"
                        android:textColor="@color/text" />
                </LinearLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button"
                    android:layout_width="328dp"
                    android:layout_height="50dp"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="2dp"
                    app:backgroundTint="@color/button_Identity"
                    android:allowClickWhenDisabled="false"
                    android:backgroundTint="#465065"
                    android:enabled="false"
                    android:fontFamily="@font/geomanist_regular"
                    android:text="Verifica mi identidad"
                    android:textAllCaps="false"
                    android:textSize="20sp"
                    app:cornerRadius="24dp"
                    android:src="@drawable/background_button_identity"
                    />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>